--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,15 @@
+env: standard
 runtime: nodejs10
+service: default
+
 handlers:
-- url: /
-  static_files: dist/index.html
-  upload: dist/index.html
-  secure: always
-- url: /
-  static_dir: dist
+  - url: /static
+    static_dir: dist/static
+
+  - url: /(.*\.(json|ico|js))$
+    static_files: dist/\1
+    upload: dist/.*\.(json|ico|js)$
+
+  - url: .*
+    static_files: dist/index.html
+    upload: dist/index.html
