--- a/app.yaml
+++ b/app.yaml
@@ -13,3 +13,7 @@ handlers:
   - url: .*
     static_files: dist/index.html
     upload: dist/index.html
+
+  - url: /(.*)
+    static_files: dist/\1
+    upload: dist/(.*)
