--- a/app.yaml
+++ b/app.yaml
@@ -1,13 +1,12 @@
 runtime: nodejs10
-default_expiration: '30d'
-
 handlers:
-  - url: dist
-    static_dir: dist
-  - url: /(.*\.(json|ico|js))$
-    static_files: dist/\1
-    upload: dist/.*\.(json|ico|js)$
-  - url: .*
-    static_files: dist/index.html
-    upload: dist/index.html
-    expiration: '0s'
+- url: /
+  static_files: dist/index.html
+  upload: dist/index.html
+  secure: always
+- url: /
+  static_dir: dist
+- url: .*
+  static_files: dist/index.html
+  upload: dist/index.html
+  expiration: '0s'
