--- a/app.yaml
+++ b/app.yaml
@@ -1,12 +1,19 @@
-runtime: nodejs10
 handlers:
-- url: /
-  static_files: dist/index.html
-  upload: dist/index.html
-  secure: always
-- url: /
-  static_dir: dist
-- url: .*
-  static_files: dist/index.html
-  upload: dist/index.html
-  expiration: '0s'
+  - url: /static/js/(.*)
+    static_files: dist/static/js/\1
+    upload: dist/static/js/(.*)
+  - url: /static/css/(.*)
+    static_files: dist/static/css/\1
+    upload: dist/static/css/(.*)
+  - url: /static/media/(.*)
+    static_files: dist/static/media/\1
+    upload: dist/static/media/(.*)
+  - url: /(.*\.(json|ico))$
+    static_files: dist/\1
+    upload: dist/.*\.(json|ico)$
+  - url: /
+    static_files: dist/index.html
+    upload: dist/index.html
+  - url: /.*
+    static_files: dist/index.html
+    upload: dist/index.html
