GAEファイル追加

--- a/app.yaml
+++ b/app.yaml
@@ -1,20 +1,18 @@
+env: standard
 runtime: nodejs10
+service: default
+
 handlers:
-  - url: /js/(.*)
-    static_files: dist/js/\1
-    upload: dist/js/(.*)
-  - url: /css/(.*)
-    static_files: dist/css/\1
-    upload: dist/css/(.*)
-  - url: /images/(.*)
-    static_files: dist/images/\1
-    upload: dist/images/(.*)
-  - url: /(.*\.(json|ico))$
+  - url: /dist
+    static_dir: dist/css
+
+  - url: /dist
+    static_dir: dist/images
+
+  - url: /(.*\.(json|ico|js))$
     static_files: dist/\1
-    upload: dist/.*\.(json|ico)$
-  - url: /
-    static_files: dist/index.html
-    upload: dist/index.html
-  - url: /.*
+    upload: dist/.*\.(json|ico|js)$
+
+  - url: .*
     static_files: dist/index.html
     upload: dist/index.html
