--- a/app.yaml
+++ b/app.yaml
@@ -5,7 +5,7 @@ service: default
 handlers:
   - url: /
     static_dir: dist/images
-     upload: dist/.*\.(png|jpg|gif)$
+    upload: dist/images/\.(png|jpg|gif)$
 
   - url: /(.*\.(json|ico|js))$
     static_files: dist/\1
