GAEファイル追加

--- a/app.yaml
+++ b/app.yaml
@@ -7,9 +7,9 @@ handlers:
     static_files: dist/\1
     upload: dist/.*\.(png|jpg|gif)$
   
-  - url: /(.*\.(css))$
-    static_files: dist/\1
-    upload: dist/.*\.(css)$
+  - url: /dist/css/(.*)
+    static_files: dist/css/\1
+    upload: dist/css/(.*)
 
   - url: /(.*\.(json|ico|js))$
     static_files: dist/\1
