--- a/app.yaml
+++ b/app.yaml
@@ -1,21 +1,35 @@
+# runtime: nodejs10
+
+# handlers:
+# - url: /dist/
+#   script: dist/index.html
+
+# - url: /dist/(.+\.(gif|png|jpg))$
+#   static_files: \1
+#   upload: .+\.(gif|png|jpg)$
+#   application_readable: true
+
+# - url: /dist/css/
+#   static_dir: css
+
+# - url: /dist/.*
+#   static_files: dist/index.html
+#   upload: dist/index.html
+#   expiration: '0s'
+
 runtime: nodejs10
 
 handlers:
-- url: /dist/
-  script: dist/index.html
+  - url: /static
+    static_dir: dist/static
 
-- url: /dist/(.+\.(gif|png|jpg))$
-  static_files: \1
-  upload: .+\.(gif|png|jpg)$
-  application_readable: true
+  - url: /(.*\.(json|ico|js))$
+    static_files: dist/\1
+    upload: build/.*\.(json|ico|js)$
 
-- url: /dist/css/
-  static_dir: css
-
-- url: /dist/.*
-  static_files: dist/index.html
-  upload: dist/index.html
-  expiration: '0s'
+  - url: .*
+    static_files: dist/index.html
+    upload: dist/index.html
 
 
 # handlers:
