--- a/app.yaml
+++ b/app.yaml
@@ -1,50 +1,12 @@
-# runtime: nodejs10
-
-# handlers:
-# - url: /dist/
-#   script: dist/index.html
-
-# - url: /dist/(.+\.(gif|png|jpg))$
-#   static_files: \1
-#   upload: .+\.(gif|png|jpg)$
-#   application_readable: true
-
-# - url: /dist/css/
-#   static_dir: css
-
-# - url: /dist/.*
-#   static_files: dist/index.html
-#   upload: dist/index.html
-#   expiration: '0s'
-
 runtime: nodejs10
-
 handlers:
-  - url: /static
-    static_dir: dist/static
-
-  - url: /(.*\.(json|ico|js))$
-    static_files: dist/\1
-    upload: build/.*\.(json|ico|js)$
-
-  - url: .*
-    static_files: dist/index.html
-    upload: dist/index.html
-
-
-# handlers:
-#   - url: /(.*\.(png|jpg|gif))$
-#     static_files: dist/\1
-#     upload: dist/.*\.(png|jpg|gif)$
-  
-#   - url: /dist/css/(.*)
-#     static_files: dist/css/\1
-#     upload: dist/css/(.*)
-
-#   - url: /(.*\.(json|ico|js))$
-#     static_files: dist/\1
-#     upload: dist/.*\.(json|ico|js)$
-
-#   - url: .*
-#     static_files: dist/index.html
-#     upload: dist/index.html
+- url: /
+  static_files: dist/index.html
+  upload: dist/index.html
+  secure: always
+- url: /
+  static_dir: dist 
+- url: .*
+  static_files: dist/index.html
+  upload: dist/index.html
+  expiration: '0s'
