--- a/app.yaml
+++ b/app.yaml
@@ -6,6 +6,6 @@ handlers:
   secure: always
 - url: /
   static_dir: dist 
-- url: dist/.*
+- url: /.*
   static_files: dist/index.html
   upload: dist/index.html
