--- a/app.yaml
+++ b/app.yaml
@@ -1,11 +1,15 @@
+env: standard
 runtime: nodejs10
+service: default
+
 handlers:
-- url: /
-  static_files: dist/index.html
-  upload: dist/index.html
-  secure: always
-- url: /
-  static_dir: dist 
-- url: /.*
-  static_files: dist/index.html
-  upload: dist/index.html
+  - url: /static
+    static_dir: build/static
+
+  - url: /(.*\.(json|ico|js))$
+    static_files: build/\1
+    upload: build/.*\.(json|ico|js)$
+
+  - url: .*
+    static_files: build/index.html
+    upload: build/index.html
