--- a/app.yaml
+++ b/app.yaml
@@ -4,12 +4,12 @@ service: default
 
 handlers:
   - url: /static
-    static_dir: build/static
+    static_dir: dist/static
 
   - url: /(.*\.(json|ico|js))$
-    static_files: build/\1
-    upload: build/.*\.(json|ico|js)$
+    static_files: dist/\1
+    upload: dist/.*\.(json|ico|js)$
 
   - url: .*
-    static_files: build/index.html
-    upload: build/index.html
+    static_files: dist/index.html
+    upload: dist/index.html
