--- a/app.yaml
+++ b/app.yaml
@@ -10,12 +10,8 @@ handlers:
     static_files: dist/\1
     upload: dist/.*\.(json|ico|js)$
 
-  - url: dist/css
-    static_dir: dist/css
-
-  - url: /(.*\.(gif|png|jpg))$
-    static_files: static/\1
-    upload: static/.*\.(gif|png|jpg)$
+  - url: /
+    static_dir: dist
 
   - url: .*
     static_files: dist/index.html
