--- a/app.yaml
+++ b/app.yaml
@@ -3,15 +3,16 @@ runtime: nodejs10
 service: default
 
 handlers:
-  - url: /static
-    static_dir: dist/static
+  - url: /
+    static_files: build/index.html
+    upload: build/index.html
+
+  - url: /
+    static_dir: build 
 
   - url: /(.*\.(json|ico|js))$
     static_files: dist/\1
     upload: dist/.*\.(json|ico|js)$
-
-  - url: /
-    static_dir: dist
 
   - url: .*
     static_files: dist/index.html
