--- a/app.yaml
+++ b/app.yaml
@@ -4,11 +4,11 @@ service: default
 
 handlers:
   - url: /
-    static_files: build/index.html
-    upload: build/index.html
+    static_files: dist/index.html
+    upload: dist/index.html
 
   - url: /
-    static_dir: build 
+    static_dir: dist 
 
   - url: /(.*\.(json|ico|js))$
     static_files: dist/\1
