GAEファイル追加

--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@ runtime: nodejs10
 service: default
 
 handlers:
-  - url: /
+  - url: /.*
     static_files: dist/index.html
     upload: dist/index.html
 
@@ -14,6 +14,6 @@ handlers:
     static_files: dist/\1
     upload: dist/.*\.(json|ico|js)$
 
-  - url: .*
-    static_files: dist/index.html
-    upload: dist/index.html
+  # - url: .*
+  #   static_files: dist/index.html
+  #   upload: dist/index.html
