--- a/app.yaml
+++ b/app.yaml
@@ -7,12 +7,12 @@ handlers:
     static_dir: dist 
 
   - url: /.*
-    static_files: /index.html
-    upload: /index.html
+    static_files: static/index.html
+    upload: static/index.html
 
   - url: /(.*\.(json|ico|js))$
-    static_files: /\1
-    upload: /.*\.(json|ico|js)$
+    static_files: static/\1
+    upload: static/.*\.(json|ico|js)$
 
   # - url: .*
   #   static_files: dist/index.html
