--- a/app.yaml
+++ b/app.yaml
@@ -3,17 +3,13 @@ runtime: nodejs10
 service: default
 
 handlers:
-   - url: /
-    static_dir: dist 
-
-  - url: /.*
-    static_files: static/index.html
-    upload: static/index.html
+  - url: /static
+    static_dir: dist/static
 
   - url: /(.*\.(json|ico|js))$
-    static_files: static/\1
-    upload: static/.*\.(json|ico|js)$
+    static_files: dist/\1
+    upload: dist/.*\.(json|ico|js)$
 
-  # - url: .*
-  #   static_files: dist/index.html
-  #   upload: dist/index.html
+  - url: /.*
+    static_files: dist/index.html
+    upload: dist/index.html
