--- a/app.yaml
+++ b/app.yaml
@@ -6,12 +6,9 @@ handlers:
   - url: /static
     static_dir: dist/static
 
-  - url: /dist/css
-    static_dir: dist/css
-
-  - url: /(.*\.(json|ico|js))$
+  - url: /(.*\.(json|ico|js|css|png))$
     static_files: dist/\1
-    upload: dist/.*\.(json|ico|js)$
+    upload: dist/.*\.(json|ico|js|css|png)$
 
   - url: /.*
     static_files: dist/index.html
