--- a/app.yaml
+++ b/app.yaml
@@ -6,9 +6,13 @@ handlers:
   - url: /static
     static_dir: dist/static
 
-  - url: /(.*\.(json|ico|js|css|png))$
+  - url: /(.*\.(json|ico|js|css))$
     static_files: dist/\1
-    upload: dist/.*\.(json|ico|js|css|png)$
+    upload: dist/.*\.(json|ico|js|css)$
+
+  - url: /dist/images
+    static_files: dist/\1
+    upload: dist/images/*.png
 
   - url: /.*
     static_files: dist/index.html
