GAEファイル追加

--- a/app.yaml
+++ b/app.yaml
@@ -10,9 +10,9 @@ handlers:
     static_files: dist/\1
     upload: dist/.*\.(json|ico|js|css)$
 
-  - url: /dist/images
-    static_files: dist/images/*.png
-    upload: dist/images/*.png
+  - url: /(.*)
+    static_files: dist/\1
+    upload: dist/(.*)
 
   - url: /.*
     static_files: dist/index.html
