--- a/app.yaml
+++ b/app.yaml
@@ -6,9 +6,9 @@ handlers:
   - url: /static
     static_dir: dist/static
 
-  - url: /(.*\.(json|ico|js|css))$
+  - url: /(.*\.(json|ico|js|css|png))$
     static_files: dist/\1
-    upload: dist/.*\.(json|ico|js|css)$
+    upload: dist/.*\.(json|ico|js|css|png)$
 
   - url: /.*
     static_files: dist/index.html
